Fix arch installation

--- a/wrappers/arch/Dockerfile
+++ b/wrappers/arch/Dockerfile
@@ -3,7 +3,9 @@ FROM archlinux
 RUN pacman -Syu --noconfirm
 RUN pacman -S base-devel --noconfirm
 ARG user=arch
-RUN useradd ${user}
+RUN useradd -m ${user}
 RUN echo "${user} ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers
 WORKDIR /home/${user}
 USER ${user}
+
+COPY . .
