--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -11,4 +11,4 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - run: make arch-docker-build
-    - run: docker run -v $(pwd):/home/arch/mount arch bash -c 'cd mount && make ARCH_PKGBUILD=${{ matrix.pkgbuild }} arch && which map-io'
+    - run: docker run -v $(pwd):/home/arch/mount arch bash -c 'cd mount && make ARCH_PKGBUILD=${{ matrix.pkgbuild }} arch-install && which map-io'
