--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -12,9 +12,9 @@ jobs:
     - uses: actions/checkout@v1
     - run: make arch-docker-build
     - run: |
-        BUILDDIR=$(mktemp -d build.XXXXXXXXXX)
-        PKGDEST=$(mktemp -d pkg.XXXXXXXXXX)
-        SRCDEST=$(mktemp -d src.XXXXXXXXXX)
+        echo BUILDDIR=$(mktemp -d build.XXXXXXXXXX) >> $GITHUB_ENV
+        echo PKGDEST=$(mktemp -d pkg.XXXXXXXXXX) >> $GITHUB_ENV
+        echo SRCDEST=$(mktemp -d src.XXXXXXXXXX) >> $GITHUB_ENV
     - run: |
         docker run \
           -v $(pwd):/home/arch \
