--- a/wrappers/arch/PKGBUILD
+++ b/wrappers/arch/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Jonathan Cowling <09cowlingj@gmail.com>
 pkgname=map-io
-pkgver=1.0.8
+pkgver=1.0.9
 pkgrel=1
 epoch=
 pkgdesc="Restrict a chosen input to a single display"
@@ -43,6 +43,6 @@ build() {
 
 package() {
   cd "$pkgname-$pkgver"
-  make install
+  make PKGDIR="$pkgdir" install
 }
 
