--- a/wrappers/debian/control
+++ b/wrappers/debian/control
@@ -3,4 +3,4 @@ Version: 1
 Maintainer: Jonathan Cowling
 Architecture: all
 Description: Restrict a chosen input to a single display
-Depends: xrandr, xinput, yad
+Depends: x11-xserver-utils, yad
